# ServerCore

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.txt  debug_build.bat  debug_build.sh  imgui.ini  logs.txt  release_build.bat  release_build.sh
.claude/: settings.local.json
ClaudeMD/: build_script_issues.md  dialog_hierarchy_search_and_cast_plan.md  docker_engine_starting_fix_plan.md  docker_install_plan.md  docker_migration_plan.md
ClaudeMD/code_review/: 00_overview.md  01_critical_issues.md  02_design_issues.md  03_safety_issues.md  04_build_system.md  05_code_quality.md  06_recommendations.md
DummyClient/: CMakeLists.txt
Scripts/: _setup_windows.bat  setup_tools_windows.bat
Scripts/Docker/: build.bat  build.sh  clean.bat  clean.sh  entrypoint.sh
Scripts/Docker/Linux/Debug/: debug_build.bat  engine_debug_build.bat  engine_server_debug_build.bat  server_debug_build.bat  thirdparty_debug_build.bat
Scripts/Docker/Linux/Release/: engine_release_build.bat  engine_server_release_build.bat  release_build.bat  server_release_build.bat  thirdparty_release_build.bat
Scripts/Docker/Windows/Debug/: debug_build.bat  engine_debug_build.bat  engine_server_debug_build.bat  server_debug_build.bat  thirdparty_debug_build.bat
Scripts/Docker/Windows/Release/: engine_release_build.bat  engine_server_release_build.bat  release_build.bat  server_release_build.bat  thirdparty_release_build.bat
Scripts/Linux/: _wsl_build.sh  setup_wsl_ubuntu.bat  wsl_clean_cache.bat
Scripts/Linux/Debug/: wsl_debug_build.bat  wsl_engine_debug_build.bat  wsl_engine_server_debug_build.bat  wsl_server_debug_build.bat  wsl_thirdparty_debug_build.bat
Scripts/Linux/Release/: wsl_engine_release_build.bat  wsl_engine_server_release_build.bat  wsl_release_build.bat  wsl_server_release_build.bat  wsl_thirdparty_release_build.bat
Scripts/Setup/: setup_docker_windows.bat  setup_docker_windows.ps1
Scripts/Tools/Compiler/: linux-clang-toolchain.cmake  windows-clang-toolchain-docker.cmake  windows-clang-toolchain.cmake
Scripts/Tools/Windows/lib/clang/19/lib/windows/: clang_rt.asan-preinit-x86_64.lib  clang_rt.asan_cxx-x86_64.lib  clang_rt.asan_dll_thunk-x86_64.lib  clang_rt.asan_dynamic_runtime_thunk-x86_64.lib  clang_rt.asan_static-x86_64.lib  clang_rt.fuzzer_interceptors-x86_64.lib  clang_rt.stats-x86_64.lib  clang_rt.stats_client-x86_64.lib  clang_rt.ubsan_standalone-x86_64.lib  clang_rt.ubsan_standalone_cxx-x86_64.lib  orc_rt-x86_64.lib
Scripts/Tools/Windows/sdk/: sdk_versions.txt
Scripts/Tools/Windows/sdk/include/msvc/ko-KR/: array.xml  atomic.xml  bitset.xml  complex.xml  condition_variable.xml  deque.xml  exception.xml  forward_list.xml  functional.xml  future.xml  initializer_list.xml  ios.xml  istream.xml  iterator.xml  list.xml  locale.xml  memory.xml  mutex.xml  new.xml  ostream.xml  queue.xml  regex.xml  scoped_allocator.xml  sstream.xml  stack.xml  string.xml  system_error.xml  thread.xml  tuple.xml  utility.xml  valarray.xml  xutility.xml
Scripts/Tools/Windows/sdk/include/shared/: d3dukmdt.h  ksarm64.h  ntstatus.h  winerror.h
Scripts/Tools/Windows/sdk/include/um/: WinUser.h  wbcl.h  wincrypt.h  winhttp.h  winnt.h
Scripts/Tools/Windows/sdk/lib/ucrt/x64/: ucrt.osmode.lib  ucrt.osmode_permissive.lib  ucrtd.osmode.lib  ucrtd.osmode_permissive.lib
Scripts/Tools/Windows/sdk/lib/um/x64/: ADSIid.Lib  AudioBaseProcessingObjectV140.lib  Bits.Lib  BufferOverflow.lib  BufferOverflowU.lib  CertIdl.Lib  DhcpCSvc6.Lib  DnsAPI.Lib  DtcHelp.Lib  Gdi32.Lib  Htmlhelp.Lib  IEPMAPI.Lib  MMC.Lib  MSTask.Lib  MqOA.Lib  MsXml2.Lib  OneCore.Lib  OneCoreUAP.Lib  OneCoreUAP_apiset.Lib  OneCoreUAP_downlevel.Lib  OneCore_apiset.Lib  OneCore_downlevel.Lib  PhotoAcquireUID.lib  PortableDeviceGuids.lib  RASAPI32.Lib  SAPI.Lib  ScrnSavW.Lib  ScrnSave.Lib  SearchSDK.lib  SrClient.lib  Svcguid.Lib  TranscodeImageUID.lib  User32.Lib  WS2_32.Lib  WiaGuid.Lib  WinStrm.Lib  WinTrust.Lib  WindowsApp.lib  WindowsApp_downlevel.lib  ahadmin.lib  (+57 more)
Scripts/Windows/Debug/: debug_build.bat  engine_debug_build.bat  engine_server_debug_build.bat  server_debug_build.bat  thirdparty_debug_build.bat
Scripts/Windows/Release/: engine_release_build.bat  engine_server_release_build.bat  release_build.bat  server_release_build.bat  thirdparty_release_build.bat
Server/DummyClient/: CMakeLists.txt
Server/DummyClient/src/: main.cpp
Server/ServerMonitor/: CMakeLists.txt
Server/ServerMonitor/src/: main.cpp
Server/TestServer/: CMakeLists.txt
Server/TestServer/include/: TestServerDialog.h
Server/TestServer/src/: TestServerDialog.cpp  main.cpp
ServerEngine/: CMakeLists.txt
ServerEngine/include/: Header.h  ServerDialog.h  ServerDialogPreset.h  ServerDlgUtil.h  ServerDlgUtils.h  ServerEngine.h  Struct.h  Type.h  Util.h
ServerEngine/include/Core/: Preprocess.h  Struct.h  Util.h
ServerEngine/src/: ServerDialogPreset.cpp  ServerDlgUtil.cpp  ServerEngine.cpp  Util.cpp
ServerMonitor/: CMakeLists.txt
TestServer/: CMakeLists.txt
TestServer/src/: main.cpp
